# OSIRIS

./: .gitignore
core/: .env.example  2025_GRADE_IMPROVEMENTS_SUMMARY.md  =0.24.0  AGENT_DOCUMENTATION.md  COMPLETE_AURA_INTELLIGENCE_SYNTHESIS.md  COMPREHENSIVE_IMPORT_ANALYSIS.md  COMPREHENSIVE_TEST_REPORT.md  CONFIGURATION_REFACTOR_SUMMARY.md  CONVERSATION_ACHIEVEMENTS.md  CORE_SCHEMAS_COMPLETE.md  CUTTING_EDGE_ANALYSIS.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY_MANUAL_VALIDATION.md  Dockerfile  Dockerfile.production  FINAL_2025_IMPROVEMENTS.md  FINAL_VALIDATION_REPORT.md  IMPORT_FIX_SUMMARY.md  LANGGRAPH_IMPLEMENTATION_PLAN.md  LANGGRAPH_SUCCESS_REPORT.md  MANUAL_VALIDATION_DRILL_LOGS.md  MANUAL_VALIDATION_SUMMARY_REPORT.md  MODULAR_ARCHITECTURE_COMPLETE.md  Makefile  OPERATIONAL_READINESS_REPORT.md  OPERATIONAL_VALIDATION_EXECUTION_REPORT.md  PHASE3D_PROFESSIONAL_ARCHITECTURE.md  PHASE_1_IMPLEMENTATION.md  PHASE_1_STEP_2_COMPLETE.md  PHASE_2_PROJECT_CHIMERA_TECHNICAL_DESIGN.md  PHASE_3C_COMPLETION_REPORT.md  PRODUCTION_HARDENING_PLAN.md  PRODUCTION_ROLLOUT_TRACKER.md  PRODUCTION_VALIDATION_COMPLETE.md  PRODUCTION_VALIDATION_EXECUTION_PLAN.md  PRODUCTION_VALIDATION_REPORT.md  PROJECT_STATUS_AND_NEXT_STEPS.md  README.md  REFACTORING_SUMMARY.md  (+105 more)
core/demo_observability/: ai_anomaly_detection_config.json  ebpf_monitoring_config.json  intelligent_alerting_config.json  keda_autoscaling_config.json  observability_architecture_report.json  observability_demo_manifest.json  opentelemetry_config.json
core/demo_validation/: ci_cd_integration_demo.json  docker_compose_demo.json  integration_testing_demo.json  load_testing_demo.json  quality_validation_demo.json  validation_system_demo_20250726_005220.json
core/deployed_pipeline/: deployment_manifest.json
core/deployed_pipeline/archival_jobs/: archival_config.json  run_archival.py
core/deployed_pipeline/config/: pipeline_config.json
core/deployed_pipeline/consolidation_jobs/: consolidation_config.json  run_consolidation.py
core/deployed_pipeline/monitoring/: monitor_pipeline.py  monitoring_config.json  pipeline_health.json
core/docs/: CONFIGURATION_USAGE_GUIDE.md  CONFIG_FIX_SUMMARY.md  CONFIG_NAMING_MIGRATION.md  LNN_COUNCIL_IMPLEMENTATION_GUIDE.md  LNN_COUNCIL_IMPLEMENTATION_SUMMARY.md  LNN_COUNCIL_INTEGRATION_RESEARCH.md  MODULAR_LNN_ARCHITECTURE.md  NEXT_PHASE_EXECUTIVE_SUMMARY.md  NEXT_PHASE_IMPLEMENTATION_PLAN.md  README.md  SCHEMA_CONTRACTS.md  STREAMING_TDA_FINAL_REPORT.md  STREAMING_TDA_IMPLEMENTATION_PLAN.md  STREAMING_TDA_IMPLEMENTATION_PROGRESS.md  STREAMING_TDA_OPERATIONS_RUNBOOK.md  STREAMING_TDA_PROGRESS_REPORT.md  STREAMING_TDA_TECHNICAL_BRIEF.md  STREAMING_TDA_TESTING_ENHANCEMENTS_SUMMARY.md  STREAMING_TDA_TESTING_GUIDE.md
core/docs/01_CONVERSATION_CONTEXT/: conversation_summary.md  research_integration.md
core/docs/03_PHASE_ROADMAP/: complete_phase_roadmap.md  phase_2a_enterprise_api.md
core/docs/06_RESEARCH_PRESERVATION/: original_project_research.md
core/docs/diagrams/: NEXT_PHASE_ARCHITECTURE.md
core/docs/research_briefs/: LIQUID_NEURAL_NETWORKS_BRIEF.md
core/examples/: distributed_orchestration_example.py  enhanced_hybrid_orchestration_example.py  modular_lnn_example.py  workflows_refactored_usage.py
core/k8s/: archival-cronjob.yaml  semantic-consolidation-cronjob.yaml
core/monitoring/: archival-dashboard.json  prometheus-dev.yml
core/monitoring/grafana-dashboards/: aura-system-overview.json
core/ops/monitoring/: alloy-config.river  grafana-dashboard.json  keda-autoscaling.yaml  prometheus-alerts.yaml
core/scripts/: validation_checklist.py
core/src/: __init__.py  main.py
core/src/aura_common/: __init__.py  config.py  errors.py  logging.py
core/src/aura_common/atomic/: __init__.py  atomic_base.py  base.py
core/src/aura_common/config/: __init__.py  base.py  feature_flags.py  loaders.py  manager.py  validators.py
core/src/aura_common/errors/: __init__.py  circuit_breaker.py  exceptions.py  handlers.py  recovery.py
core/src/aura_common/feature_flags/: manager.py
core/src/aura_common/logging/: __init__.py  correlation.py  shadow_mode.py  structured.py
core/src/aura_intelligence/: __init__.py  causal_store.py  cloud_integration.py  config.py  constitutional.py  event_store.py  feature_flags.py  tda_engine.py  unified_brain.py  vector_search.py
core/src/aura_intelligence/adapters/: __init__.py  mem0_adapter.py  neo4j_adapter.py  redis_adapter.py  tda_agent_context.py  tda_mem0_adapter.py  tda_neo4j_adapter.py
core/src/aura_intelligence/agents/: __init__.py  base.py  observability.py  supervisor.py  tda_analyzer.py  validator.py
core/src/aura_intelligence/api/: governance_dashboard.py  search.py  streaming.py  streaming_pro.py
core/src/aura_intelligence/benchmarks/: workflow_benchmarks.py
core/src/aura_intelligence/chaos/: experiments.py
core/src/aura_intelligence/collective/: __init__.py  context_engine.py  graph_builder.py  memory_manager.py  orchestrator.py  supervisor.py
core/src/aura_intelligence/config/: __init__.py  agent.py  api.py  aura.py  base.py  base_compat.py  deployment.py  integration.py  memory.py  observability.py  security.py
core/src/aura_intelligence/consensus/: __init__.py  byzantine.py  examples.py  manager.py  raft.py  simple.py  types.py  workflows.py
core/src/aura_intelligence/core/: __init__.py  agents.py  amplification.py  consciousness.py  knowledge.py  memory.py  system.py  topology.py
core/test_governance_modules/governance/: __init__.py  database.py  risk_engine.py
core/tests/: conftest.py  test_config.py  test_coverage_report.py  test_decorators.py  test_phase_2c_search_validation.py
core/tests/integration/: Dockerfile.test  docker-compose.test.yml  test_pipeline_e2e.py
core/tests/load/: test_search_load.py
core/tests/migration/: test_workflows_migration.py
core/tests/quality/: validate_pipeline.py
core/tests/unit/: test_workflows_state.py
core/validation/: event_replay_validator.py  metrics_validator.py  resilience_validator.py  run_all_validations.py
(+282 files in other folders)
